--- a/demos/index.html
+++ b/demos/index.html
@@ -5,6 +5,6 @@
         <title>Morningstar Connectors Demos</title>
     </head>
     <body>
-        <a href="stock/demo.html">Highchart Stock demo</a>
+        <a href="stock/demo.html">Highcharts Stock demo</a>
     </body>
 </html>
