--- a/demos/index.html
+++ b/demos/index.html
@@ -5,6 +5,9 @@
         <title>Morningstar Connectors Demos</title>
     </head>
     <body>
-        <a href="stock/demo.html">Highcharts Stock demo</a>
+        <ul>
+            <li><a href="rna-news/demo.html">Highcharts Dashboards RNA news demo</a></li>
+            <li><a href="stock/demo.html">Highcharts Stock demo</a></li>
+        </ul>
     </body>
 </html>
