--- a/demos/stock/demo.html
+++ b/demos/stock/demo.html
@@ -8,6 +8,10 @@
         <title>Highcharts Stock Demo - Morningstar Connectors Demos</title>
     </head>
     <body>
+        <p>
+            Add your Postman environment file from Morningstar to start the demo:
+            <input type="file" id="postman-json" accept=".json,application/json" />
+        </p>
         <div id="container"></div>
         <script src="./demo.js"></script>
     </body>
