Simplified stock demo.

--- a/demos/stock/demo.html
+++ b/demos/stock/demo.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="https://code.highcharts.com/dashboards/2.2.0/css/dashboards.css" />
-        <script src="https://code.highcharts.com/dashboards/2.2.0/dashboards.src.js"></script>
-        <script src="../../code/morningstar-connectors.src.js"></script>
+        <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
+        <script src="../../code/morningstar-standalone.src.js"></script>
         <title>Highcharts Stock Demo - Morningstar Connectors Demos</title>
     </head>
     <body>
