Renamed demo folders.

--- a/demos/index.html
+++ b/demos/index.html
@@ -5,9 +5,10 @@
         <title>Morningstar Connectors Demos</title>
     </head>
     <body>
+        <h1>Morningstar Connectors Demos</h1>
         <ul>
-            <li><a href="rna-news/demo.html">Highcharts Dashboards RNA news demo</a></li>
-            <li><a href="stock/demo.html">Highcharts Stock demo</a></li>
+            <li><a href="dashboards-rna-news/demo.html">Highcharts Dashboards with RNA news connector</a></li>
+            <li><a href="stock-timeseries/demo.html">Highcharts Stock with TimeSeries connector</a></li>
         </ul>
     </body>
 </html>
