Synced demo titles.

--- a/demos/index.html
+++ b/demos/index.html
@@ -7,8 +7,8 @@
     <body>
         <h1>Morningstar Connectors Demos</h1>
         <ul>
-            <li><a href="dashboards-rna-news/demo.html">Highcharts Dashboards with RNA news connector</a></li>
-            <li><a href="stock-timeseries/demo.html">Highcharts Stock with TimeSeries connector</a></li>
+            <li><a href="dashboards-rna-news/demo.html">Highcharts Dashboards + Morningstar RNA News</a></li>
+            <li><a href="stock-timeseries/demo.html">Highcharts Stock + Morningstar TimeSeries</a></li>
         </ul>
     </body>
 </html>
