--- a/demos/stock-timeseries/demo.html
+++ b/demos/stock-timeseries/demo.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
         <script src="../../code/connectors-morningstar.src.js"></script>
-        <title>Highcharts Stock Demo - Morningstar Connectors Demos</title>
+        <title>Highcharts Stock + Morningstar TimeSeries</title>
     </head>
     <body>
+        <h1>Highcharts Stock + Morningstar TimeSeries</h1>
         <p>
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
