Fix renaming of leftovers (#19)
* Updated LICENSE.md.
* Updated README.md.
* Removed old index.html.
* Renamed demo folders.
* Renamed docs draft.

--- a/demos/index.html
+++ b/demos/index.html
@@ -5,9 +5,10 @@
         <title>Morningstar Connectors Demos</title>
     </head>
     <body>
+        <h1>Morningstar Connectors Demos</h1>
         <ul>
-            <li><a href="rna-news/demo.html">Highcharts Dashboards RNA news demo</a></li>
-            <li><a href="stock/demo.html">Highcharts Stock demo</a></li>
+            <li><a href="dashboards-rna-news/demo.html">Highcharts Dashboards + Morningstar RNA News</a></li>
+            <li><a href="stock-timeseries/demo.html">Highcharts Stock + Morningstar TimeSeries</a></li>
         </ul>
     </body>
 </html>
