* Specify font * Fix assigning data to chart

--- a/demos/stock-timeseries/demo.html
+++ b/demos/stock-timeseries/demo.html
@@ -5,6 +5,11 @@
         <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
         <script src="../../code/connectors-morningstar.src.js"></script>
         <title>Highcharts Stock + Morningstar TimeSeries</title>
+        <style>
+            body {
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
         <h1>Highcharts Stock + Morningstar TimeSeries</h1>
