Add demo for OHLCV using Highcharts Stock OHLC chart

--- a/demos/index.html
+++ b/demos/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="dashboards-rna-news/demo.html">Highcharts Dashboards + Morningstar RNA News</a></li>
             <li><a href="stock-timeseries/demo.html">Highcharts Stock + Morningstar TimeSeries</a></li>
+            <li><a href="stock-ohlcv/demo.html">Highcharts Stock + Morningstar OHLCV TimeSeries</a></li>
         </ul>
     </body>
 </html>
