--- a/demos/stock-ohlcv/demo.html
+++ b/demos/stock-ohlcv/demo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
-        <script src="../../code/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.src.js"></script>
         <title>Highcharts Stock + Morningstar OHLCV TimeSeries</title>
         <style>
             body {
