Add risk score demo to index

--- a/demos/index.html
+++ b/demos/index.html
@@ -10,6 +10,7 @@
             <li><a href="dashboards-rna-news/demo.html">Highcharts Dashboards + Morningstar RNA News</a></li>
             <li><a href="stock-timeseries/demo.html">Highcharts Stock + Morningstar TimeSeries</a></li>
             <li><a href="stock-ohlcv/demo.html">Highcharts Stock + Morningstar OHLCV TimeSeries</a></li>
+            <li><a href="dashboards-risk-score/demo.html">Highcharts Dashboards + Morningstar Risk Score</a></li>
         </ul>
     </body>
 </html>
