--- a/demos/dashboards-risk-score/demo.html
+++ b/demos/dashboards-risk-score/demo.html
@@ -6,7 +6,7 @@
         <script src="https://code.highcharts.com/dashboards/datagrid.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
-        <script src="../../code/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
         <title>Highcharts Dashboards + Morningstar Portfolio Risk Score</title>
     </head>
     <body>
