--- a/demos/stock-securitydetails/demo.html
+++ b/demos/stock-securitydetails/demo.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
-        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/stock/highstock.js"></script>
+        <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
         <title>Highcharts Stock + Morningstar Security Details</title>
         <style>
             body {
