Demo: added manual fetch demo.

--- a/demos/index.html
+++ b/demos/index.html
@@ -12,6 +12,7 @@
             <li><a href="stock-ohlcv/demo.html">Highcharts Stock + Morningstar OHLCV TimeSeries</a></li>
             <li><a href="stock-securitydetails/demo.html">Highcharts Stock + Morningstar Security Details</a></li>
             <li><a href="dashboards-risk-score/demo.html">Highcharts Dashboards + Morningstar Risk Score</a></li>
+            <li><a href="manual-fetch/demo.html">Using fetch without connectors</a></li>
         </ul>
     </body>
 </html>
