Added security details assset allocations demo.

--- a/demos/index.html
+++ b/demos/index.html
@@ -11,6 +11,7 @@
             <li><a href="stock-timeseries/demo.html">Highcharts Stock + Morningstar TimeSeries</a></li>
             <li><a href="stock-ohlcv/demo.html">Highcharts Stock + Morningstar OHLCV TimeSeries</a></li>
             <li><a href="stock-securitydetails/demo.html">Highcharts Stock + Morningstar Security Details</a></li>
+            <li><a href="stock-securitydetails-asset-allocations/demo.html">Morningstar Security Details Asset Allocations</a></li>
             <li><a href="dashboards-risk-score/demo.html">Highcharts Dashboards + Morningstar Risk Score</a></li>
         </ul>
     </body>
