--- a/demos/index.html
+++ b/demos/index.html
@@ -14,6 +14,7 @@
             <li><a href="dashboards-risk-score/demo.html">Highcharts Dashboards + Morningstar Risk Score</a></li>
             <li><a href="dashboards-investment-screener/demo.html">Highcharts Dashboards + Morningstar Investment Screener</a></li>
             <li><a href="manual-fetch/demo.html">Using fetch without connectors</a></li>
+            <li><a href="stock-security-compare/demo.html">Security Compare</a></li>
         </ul>
     </body>
 </html>
