New dashboards demo for Morningstar XRay connector.

--- a/demos/dashboards-xray/demo.html
+++ b/demos/dashboards-xray/demo.html
@@ -18,6 +18,8 @@
         <p id="loading-label" style="display: none;">Loading data…</p>
         <div class="row" id="container">
             <div class="cell" id="dashboard-col-0"></div>
+            <div class="cell" id="dashboard-col-1"></div>
+            <div class="cell" id="dashboard-col-2"></div>
         </div>
         <script src="./demo.js"></script>
     </body>
