--- a/demos/index.html
+++ b/demos/index.html
@@ -8,6 +8,7 @@
         <h1>Morningstar Connectors Demos</h1>
         <ul>
             <li><a href="dashboards-rna-news/demo.html">Highcharts Dashboards + Morningstar RNA News</a></li>
+            <li><a href="dashboards-xray/demo.html">Highcharts Dashboards + Morningstar XRay Connector</a></li>
             <li><a href="stock-timeseries/demo.html">Highcharts Stock + Morningstar TimeSeries</a></li>
             <li><a href="stock-ohlcv/demo.html">Highcharts Stock + Morningstar OHLCV TimeSeries</a></li>
             <li><a href="stock-securitydetails/demo.html">Highcharts Stock + Morningstar Security Details</a></li>
