--- a/demos/dashboards-xray/demo.html
+++ b/demos/dashboards-xray/demo.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="demo.css" />
-        <script src="https://code.highcharts.com/dashboards/datagrid.js"></script>
-        <script src="https://code.highcharts.com/highcharts.js"></script>
-        <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
+        <script src="https://code.highcharts.com/dashboards/datagrid.src.js"></script>
+        <script src="https://code.highcharts.com/dashboards/dashboards.src.js"></script>
         <script src="../../code/connectors-morningstar.src.js"></script>
         <title>Highcharts Dashboards DataGrid + Morningstar XRay Connector</title>
     </head>
