Add Regulatory Screener docs and demo.

--- a/demos/dashboards-find-similar-screener/demo.html
+++ b/demos/dashboards-find-similar-screener/demo.html
@@ -20,9 +20,9 @@
         <div class="row" id="container">
             <div class="cell" id="dashboard-col-1"></div>
         </div>
-        <span id='total'>-</span>
-        <span id='page'>-</span>
-        <span id='total-pages'>-</span>
+        <span id='total'></span>
+        <span id='page'></span>
+        <span id='total-pages'></span>
         <script src="./demo.js"></script>
     </body>
 </html>
