--- a/demos/index.html
+++ b/demos/index.html
@@ -15,6 +15,7 @@
             <li><a href="dashboards-investment-screener/demo.html">Highcharts Dashboards + Morningstar Investment Screener</a></li>
             <li><a href="dashboards-esg-screener/demo.html">Highcharts Dashboards + Morningstar ESG Screener</a></li>
             <li><a href="dashboards-find-similar-screener/demo.html">Highcharts Dashboards + Morningstar Find Similar Screener</a></li>
+            <li><a href="dashboards-regulatory-screener/demo.html">Highcharts Dashboards + Morningstar Regulatory Screener</a></li>
             <li><a href="manual-fetch/demo.html">Using fetch without connectors</a></li>
         </ul>
     </body>
