--- a/demos/dashboards-investor-preferences/demo.html
+++ b/demos/dashboards-investor-preferences/demo.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="demo.css" />
-        <script src="https://code.highcharts.com/dashboards/datagrid.src.js"></script>
-        <script src="https://code.highcharts.com/dashboards/dashboards.src.js"></script>
-        <script src="../../code/connectors-morningstar.src.js"></script>
+        <script src="https://code.highcharts.com/dashboards/datagrid.js"></script>
+        <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
+        <script src="../../code/connectors-morningstar.js"></script>
 
         <title>Highcharts Dashboards + Morningstar Investor Preferences Screener</title>
     </head>
@@ -56,6 +56,33 @@
         </div>
         <div class="row" id="container">
             <div class="cell" id="dashboard-col-1"></div>
+        </div>
+        <div class="dashboard-legend">
+            <h4>Legend</h4>
+            <ul>
+              <li>
+                <strong>User Preference 1:</strong>
+                <ul>
+                    <li>Morningstar Star Rating Above 3</li>
+                </ul>
+              </li>
+              <li>
+                <strong>User Preference 2:</strong>
+                <ul>
+                    <li>SFDR Type 8 and Greenhouse Gas Emissions 1 Considered</li>
+                    <li class="legend-or"><strong>OR</strong></li>
+                    <li>
+                      SFDR Type 9 with Greenhouse Gas Emissions 1 and 2 and<br>
+                      Energy Consumption under NACE A & B Considered
+                    </li>
+                  </ul>
+              <li>
+                <strong>User Preference 3:</strong>
+                <ul>
+                    <li>SFDR Type 9 or 10 OR Greenhouse Gas Emissions 1 & 3 Considered</li>
+                </ul>
+              </li>
+            </ul>
         </div>
         <div class="filters-row">
             <button class="cell" id="prev">Prev page</button>
