--- a/demos/dashboards-investment-screener/demo.html
+++ b/demos/dashboards-investment-screener/demo.html
@@ -7,10 +7,10 @@
         <script src="https://code.highcharts.com/dashboards/dashboards.src.js"></script>
         <script src="../../code/connectors-morningstar.src.js"></script>
 
-        <title>Highcharts Dashboards + Morningstar Portfolio Investment Details</title>
+        <title>Highcharts Dashboards + Morningstar Investment Screener</title>
     </head>
     <body>
-        <h1>Highcharts Dashboards + Morningstar Portfolio Investment Details</h1>
+        <h1>Highcharts Dashboards + Morningstar Investment Screener</h1>
         <p>
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
