feature/esg-findsimilar-regulatory-screeners (#67)
* Add ESG screener docs and demo.

* Add Find Similar Screener.

* Add Regulatory Screener docs and demo.

* Add missing morningstar docs link for regulatory screener.

* remove core import from screeners

* add screener.md

* add missing find-similar screener filters and fix typo

* Added grid title to find similar screener demo.

--- a/demos/dashboards-find-similar-screener/demo.html
+++ b/demos/dashboards-find-similar-screener/demo.html
@@ -7,31 +7,21 @@
         <script src="https://code.highcharts.com/dashboards/dashboards.src.js"></script>
         <script src="../../code/connectors-morningstar.src.js"></script>
 
-        <title>Highcharts Dashboards + Morningstar Investment Screener</title>
+        <title>Highcharts Dashboards + Morningstar Find Similar Screener</title>
     </head>
     <body>
-        <h1>Highcharts Dashboards + Morningstar Investment Screener</h1>
+        <h1>Highcharts Dashboards + Morningstar Find Similar Screener</h1>
         <p>
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
         <p id="loading-label" style="display: none;">Loading data…</p>
-        <div class="filters-row">
-            <button class="cell" id='filter-1'>Highly Rated</button>
-            <button class="cell" id='filter-2'>Top Performer funds</button>
-            <button class="cell" id='filter-3'>Highly Sustainalble</button>
-            <button class="cell" id='filter-4'>Low Expenses</button>
-        </div>
-        <div>
-            Current filter: 
-            <span id='current-filter'></span>
-        </div>
         <div class="row" id="container">
             <div class="cell" id="dashboard-col-1"></div>
         </div>
-        <span id='total'>-</span>
-        <span id='page'>-</span>
-        <span id='total-pages'>-</span>
+        <span id='total'></span>
+        <span id='page'></span>
+        <span id='total-pages'></span>
         <script src="./demo.js"></script>
     </body>
 </html>
