Added portfolio converters to Compare connector.

--- a/demos/index.html
+++ b/demos/index.html
@@ -15,6 +15,8 @@
             <li><a href="dashboards-investment-screener/demo.html">Highcharts Dashboards + Morningstar Investment Screener</a></li>
             <li><a href="manual-fetch/demo.html">Using fetch without connectors</a></li>
             <li><a href="stock-security-compare/demo.html">Security Compare</a></li>
+            <li><a href="security-compare-asset-allocations/demo.html">Security Compare Assets Allocations</a></li>
+            <li><a href="test/demo.html">Remove this</a></li>
         </ul>
     </body>
 </html>
