--- a/demos/index.html
+++ b/demos/index.html
@@ -37,16 +37,16 @@
                                 <span>API</span>
                             </div>
                         </a>
-                        <a href="https://shop.highcharts.com/" target="_blank" class="cart">
+                        <a href="https://shop.highcharts.com/contact/partner-data" target="_blank" class="cart">
                             <div>
                                 <img src="assets/cart_icon.svg" alt="Cart" class="icon" />
                             </div>
                         </a>
                     </div>
                 </div>
-                <h2>Demo Headline</h2>
+                <h2>Morningstar Connectors Demos</h2>
                 <div class="sidebar-navigation">
-                    <h3>Demo category</h3>
+                    <h3>Demos</h3>
                     <ul>
                         <li><button onclick="selectDemo('dashboards-rna-news/demo.html', this)" class="selected">
                             Highcharts Dashboards + Morningstar RNA News
@@ -77,6 +77,9 @@
                             <img src="assets/chevron.svg" alt="Logo" class="logo" />
                         </button></li>
                     </ul>
+                </div>
+                <div class="sidebar-footer">
+                    <small>© 2025 Highsoft. All rights reserved.</small>
                 </div>
             </div>
             <iframe id="demoIframe" class="iframe" src="dashboards-rna-news/demo.html"></iframe>
