add missing demos

--- a/demos/index.html
+++ b/demos/index.html
@@ -48,34 +48,78 @@
                 <div class="sidebar-navigation">
                     <h3>Demos</h3>
                     <ul>
-                        <li><button onclick="selectDemo('dashboards-rna-news/demo.html', this)" class="selected">
-                            Highcharts Dashboards + Morningstar RNA News
-                            <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                        </button></li>
-                        <li><button onclick="selectDemo('stock-timeseries/demo.html', this)">
-                            Highcharts Stock + Morningstar TimeSeries
-                            <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                        </button></li>
-                        <li><button onclick="selectDemo('stock-ohlcv/demo.html', this)">
-                            Highcharts Stock + Morningstar OHLCV TimeSeries
-                            <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                        </button></li>
-                        <li><button onclick="selectDemo('stock-securitydetails/demo.html', this)">
-                            Highcharts Stock + Morningstar Security Details
-                            <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                        </button></li>
-                        <li><button onclick="selectDemo('dashboards-risk-score/demo.html', this)">
-                            Highcharts Dashboards + Morningstar Risk Score
-                            <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                        </button></li>
-                        <li><button onclick="selectDemo('dashboards-investment-screener/demo.html', this)">
-                            Highcharts Dashboards + Investment Screener
-                            <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                        </button></li>
-                        <li><button onclick="selectDemo('manual-fetch/demo.html', this)">
-                            Using fetch without connectors
-                            <img src="assets/chevron.svg" alt="Logo" class="logo" />
-                        </button></li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-rna-news/demo.html', this)" class="selected">
+                                Highcharts Dashboards + Morningstar RNA News
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-esg-screener/demo.html', this)">
+                                Highcharts Dashboards + Morningstar ESG Screener
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-find-similar-screener/demo.html', this)">
+                                Highcharts Dashboards + Morningstar Find Similar Screener
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-investment-screener/demo.html', this)">
+                                Highcharts Dashboards + Morningstar Investment Screener
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-regulatory-screener/demo.html', this)">
+                                Highcharts Dashboards + Morningstar Regulatory Screener
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-risk-score/demo.html', this)">
+                                Highcharts Dashboards + Morningstar Risk Score
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-xray/demo.html', this)">
+                                Highcharts Dashboards DataGrid + Morningstar XRay Connector
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('stock-timeseries/demo.html', this)">
+                                Highcharts Stock + Morningstar TimeSeries
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('stock-ohlcv/demo.html', this)">
+                                Highcharts Stock + Morningstar OHLCV TimeSeries
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('stock-securitydetails/demo.html', this)">
+                                Highcharts Stock + Morningstar Security Details
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('stock-securitydetails-asset-allocations/demo.html', this)">
+                                Morningstar Security Details Asset Allocations
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('manual-fetch/demo.html', this)">
+                                Manual Fetch
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
                     </ul>
                 </div>
                 <div class="sidebar-footer">
