feature/investor-preferences-screener (#66)
* Created investor preferences screener, added demo.

* Added tests, improves linting and add typing in connector body.

* Change way of DOM manipulation in demo.

* Added missing docs page, refined filters in demo.

* Add ESG screener docs and demo.

* Add Find Similar Screener.

* Add Regulatory Screener docs and demo.

* Add missing morningstar docs link for regulatory screener.

* Added human readable header formats in dashboard.

* Add SVG icon, remove Highcharts import and apply suggestions.

* remove core import from screeners

* add screener.md

* add missing find-similar screener filters and fix typo

* requested changes

* Added cell format for userPref and star rating, included legend.

* Fix linting issue.

* Apply requested changes.

* Requested changes

* Add investor-preferences to screener docs list.

* Refactor pagination logic in demo.

---------

Co-authored-by: Mateusz Bernacik <mat.bernacik@gmail.com>

--- a/demos/index.html
+++ b/demos/index.html
@@ -73,6 +73,12 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('dashboards-investor-preferences/demo.html', this)">
+                                Highcharts Dashboards + Morningstar Investor Preferences Screener
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('dashboards-regulatory-screener/demo.html', this)">
                                 Highcharts Dashboards + Morningstar Regulatory Screener
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
