--- a/demos/security-compare-asset-allocations/demo.html
+++ b/demos/security-compare-asset-allocations/demo.html
@@ -8,7 +8,12 @@
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="https://code.highcharts.com/dashboards/modules/layout.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>Highcharts Dashboards + Morningstar RNA News</title>
+        <title>Highcharts Dashboards + Morningstar Compare Asset Allocations</title>
+        <style>
+            body {
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
         <h1>Highcharts Dashboards + Morningstar Compare Asset Allocations</h1>
