--- a/demos/security-compare-asset-allocations/demo.html
+++ b/demos/security-compare-asset-allocations/demo.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="demo.css" />
-        <script src="https://code.highcharts.com/dashboards/datagrid.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/dashboards/dashboards.js"></script>
         <script src="https://code.highcharts.com/dashboards/modules/layout.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
+        <script src="https://code.highcharts.com/modules/accessibility.js"></script>
         <title>Highcharts Dashboards + Morningstar Compare Asset Allocations</title>
         <style>
             body {
