--- a/demos/stock-security-compare/demo.html
+++ b/demos/stock-security-compare/demo.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
+        <script src="https://code.highcharts.com/modules/accessibility.js"></script>
         <title>Highcharts Stock + Morningstar Security Compare</title>
         <style>
             body {
