Move secId to variable in tests, add demo for Rolling Return.

--- a/demos/index.html
+++ b/demos/index.html
@@ -103,6 +103,12 @@
                             </button>
                         </li>
                         <li>
+                            <button onclick="selectDemo('stock-timeseries-rolling-return/demo.html', this)">
+                                Highcharts Stock + Morningstar Rolling Return
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
                             <button onclick="selectDemo('stock-ohlcv/demo.html', this)">
                                 Highcharts Stock + Morningstar OHLCV TimeSeries
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
