Refactored dashboards compare demo.

--- a/demos/index.html
+++ b/demos/index.html
@@ -133,8 +133,8 @@
                             </button>
                         </li>
                         <li>
-                            <button onclick="selectDemo('security-compare-asset-allocations/demo.html', this)">
-                                Security Compare Assets Allocations
+                            <button onclick="selectDemo('dashboards-compare-asset-allocations/demo.html', this)">
+                                Highcharts Dashboards +  Security Compare Assets Allocations
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
