--- a/demos/index.html
+++ b/demos/index.html
@@ -132,6 +132,18 @@
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
+                        <li>
+                            <button onclick="selectDemo('stock-security-compare/demo.html', this)">
+                                Security Compare
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-compare-asset-allocations/demo.html', this)">
+                                Highcharts Dashboards +  Security Compare Assets Allocations
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
                     </ul>
                 </div>
                 <div class="sidebar-footer">
