Added loading, implemented new logic in all demos.

--- a/demos/dashboards-find-similar-screener/demo.html
+++ b/demos/dashboards-find-similar-screener/demo.html
@@ -11,17 +11,17 @@
     </head>
     <body>
         <h1>Highcharts Dashboards + Morningstar Find Similar Screener</h1>
-        <p>
+        <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
-        <p id="loading-label" style="display: none;">Loading data…</p>
+        <p id="loading-label">Loading data…</p>
         <div class="row" id="container">
             <div class="cell" id="dashboard-col-1"></div>
         </div>
         <span id='total'></span>
         <span id='page'></span>
         <span id='total-pages'></span>
-        <script src="./demo.js"></script>
+        <script type="module" src="./demo.js"></script>
     </body>
 </html>
