--- a/demos/dashboards-xray/demo.html
+++ b/demos/dashboards-xray/demo.html
@@ -10,16 +10,16 @@
     </head>
     <body>
         <h1>Highcharts Dashboards DataGrid + Morningstar XRay Connector</h1>
-        <p>
+        <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
-        <p id="loading-label" style="display: none;">Loading data…</p>
+        <p id="loading-label">Loading data…</p>
         <div class="row" id="container">
             <div class="cell" id="dashboard-col-0"></div>
             <div class="cell" id="dashboard-col-1"></div>
             <div class="cell" id="dashboard-col-2"></div>
         </div>
-        <script src="./demo.js"></script>
+        <script type="module" src="./demo.js"></script>
     </body>
 </html>
