--- a/demos/dashboards-compare-asset-allocations/demo.html
+++ b/demos/dashboards-compare-asset-allocations/demo.html
@@ -9,20 +9,15 @@
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
         <script src="https://code.highcharts.com/modules/accessibility.js"></script>
         <title>Highcharts Dashboards + Morningstar Compare Asset Allocations</title>
-        <style>
-            body {
-                font-family: sans-serif;
-            }
-        </style>
     </head>
     <body>
         <h1>Highcharts Dashboards + Morningstar Compare Asset Allocations</h1>
-        <p>
+        <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
-        <p id="loading-label" style="display: none;">Loading data…</p>
+        <p id="loading-label">Loading data…</p>
         <div id="container"></div>
-        <script src="./demo.js"></script>
+        <script type="module" src="./demo.js"></script>
     </body>
 </html>
