--- a/demos/stock-timeseries-rolling-return/demo.html
+++ b/demos/stock-timeseries-rolling-return/demo.html
@@ -2,22 +2,29 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="https://code.highcharts.local/stock/highstock.js"></script>
+        <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>Highcharts Stock + Morningstar Rolling Return</title>
+        <title>Highcharts Stock + Morningstar TimeSeries</title>
         <style>
             body {
                 font-family: sans-serif;
+            }
+            #postman-message {
+                display: none;
+            }
+            #loading-label {
+                display: none;
             }
         </style>
     </head>
     <body>
         <h1>Highcharts Stock + Morningstar Rolling Return</h1>
-        <p>
+        <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
+        <p id="loading-label">Loading data…</p>
         <div id="container"></div>
-        <script src="./demo.js"></script>
+        <script type="module" src="./demo.js"></script>
     </body>
 </html>
