--- a/demos/stock-timeseries/demo.html
+++ b/demos/stock-timeseries/demo.html
@@ -12,6 +12,9 @@
             #postman-message {
                 display: none;
             }
+            #loading-label {
+                display: none;
+            }
         </style>
     </head>
     <body>
@@ -20,6 +23,7 @@
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
         </p>
+        <p id="loading-label">Loading data…</p>
         <div id="container"></div>
         <script type="module" src="./demo.js"></script>
     </body>
