--- a/demos/index.html
+++ b/demos/index.html
@@ -92,7 +92,13 @@
                         </li>
                         <li>
                             <button onclick="selectDemo('dashboards-xray/demo.html', this)">
-                                Highcharts Dashboards DataGrid + Morningstar XRay Connector
+                                Highcharts Dashboards DataGrid + Morningstar XRay Connector (Portfolio)
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
+                        <li>
+                            <button onclick="selectDemo('dashboards-xray-benchmark/demo.html', this)">
+                                Highcharts Dashboards DataGrid + Morningstar XRay Connector (Benchmark)
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
