Added Other asset aloocation types, added underly holdings in demo.

--- a/demos/dashboards-xray-benchmark/demo.html
+++ b/demos/dashboards-xray-benchmark/demo.html
@@ -35,6 +35,10 @@
                 <div class="cell" id="dashboard-col-6"></div>
             </div>
 
+            <div class="row">
+                <div class="cell" id="dashboard-col-7"></div>
+            </div>
+
         </div>
         <script type="module" src="./demo.js"></script>
     </body>
