--- a/demos/index.html
+++ b/demos/index.html
@@ -121,8 +121,8 @@
                             </button>
                         </li>
                         <li>
-                            <button onclick="selectDemo('stock-securitydetails/demo.html', this)">
-                                Highcharts Stock + Morningstar Security Details
+                            <button onclick="selectDemo('core-securitydetails/demo.html', this)">
+                                Highcharts Core + Morningstar Security Details
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
