--- a/demos/index.html
+++ b/demos/index.html
@@ -144,6 +144,12 @@
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
+                        <li>
+                            <button onclick="selectDemo('performance/demo.html', this)">
+                                Performance
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
                     </ul>
                 </div>
                 <div class="sidebar-footer">
