Added XRayUS connector with basic test, demo and converters structure.

--- a/demos/index.html
+++ b/demos/index.html
@@ -156,6 +156,12 @@
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
+                        <li>
+                            <button onclick="selectDemo('xray-us-wip/demo.html', this)">
+                                XRay US
+                                <img src="assets/chevron.svg" alt="Logo" class="logo" />
+                            </button>
+                        </li>
                     </ul>
                 </div>
                 <div class="sidebar-footer">
