Added requested changes.

--- a/demos/index.html
+++ b/demos/index.html
@@ -157,8 +157,8 @@
                             </button>
                         </li>
                         <li>
-                            <button onclick="selectDemo('xray-us-wip/demo.html', this)">
-                                XRay US
+                            <button onclick="selectDemo('core-us-investment-style/demo.html', this)">
+                                Highcharts Core + Morningstar US Investment Style
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
