--- a/demos/core-us-investment-style/demo.html
+++ b/demos/core-us-investment-style/demo.html
@@ -5,7 +5,7 @@
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/modules/heatmap.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>XRay US Connector Investment Style</title>
+        <title>Highcharts Core + Morningstar US Investment Style</title>
         <style>
             body {
                 font-family: sans-serif;
@@ -19,7 +19,7 @@
         </style>
     </head>
     <body>
-        <h1>XRay US Connector Investment Style</h1>
+        <h1>Highcharts Core + Morningstar US Investment Style</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
