Added calendar year returns demo.

--- a/demos/core-us-calendar-year-return/demo.html
+++ b/demos/core-us-calendar-year-return/demo.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <script src="https://code.highcharts.com/stock/highstock.js"></script>
+        <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/connectors/morningstar/connectors-morningstar.js"></script>
-        <title>Performance</title>
+        <title>Highcharts Core + Morningstar US Calendar Year Return</title>
         <style>
             body {
                 font-family: sans-serif;
