--- a/demos/index.html
+++ b/demos/index.html
@@ -151,8 +151,8 @@
                             </button>
                         </li>
                         <li>
-                            <button onclick="selectDemo('performance/demo.html', this)">
-                                Performance
+                            <button onclick="selectDemo('core-us-calendar-year-return/demo.html', this)">
+                                Highcharts Core + Morningstar US Calendar Year Return
                                 <img src="assets/chevron.svg" alt="Logo" class="logo" />
                             </button>
                         </li>
