--- a/demos/hypo/demo.html
+++ b/demos/hypo/demo.html
@@ -18,7 +18,7 @@
         </style>
     </head>
     <body>
-        <h1>ypothetical Performance</h1>
+        <h1>Hypothetical Performance</h1>
         <p id="postman-message">
             Add your Postman environment file from Morningstar to start the demo:
             <input type="file" id="postman-json" accept=".json,application/json" />
